--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                         } else {
                             html = `
             <div id="pong-end">
-                <img src="abuelocorriendo.png" class="arbol-img" alt="Don Árbol" />
+                <img src="abuelo.sama.png" class="arbol-img" alt="Don Árbol" />
                 <h2>Muy lento....</h2>
                 <button id="pong-retry">Continuar</button>
             </div>
